--- a/package.json
+++ b/package.json
@@ -48,5 +48,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack": "^5.90.3",
+    "webpack-dev-server": "^4.15.1"
   }
 }
