--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "type": "module",
   "dependencies": {
     "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "@monaco-editor/react": "^4.6.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "chakra-ui": "^0.3.9",
     "codemirror": "^5.65.16",
     "express": "^4.18.3",
+    "framer-motion": "^11.0.14",
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
     "react-dom": "^18.2.0",
