--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.7",
+    "body-parser": "^1.20.2",
     "chakra-ui": "^0.3.9",
     "codemirror": "^5.65.16",
+    "cors": "^2.8.5",
     "express": "^4.18.3",
     "framer-motion": "^11.0.14",
+    "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
     "react-dom": "^18.2.0",
